<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_msgs</name>
  <version>0.3.0</version>
  <description>ROS messages packages for the ROBOTIS HUMANOID_ROBOT (meta package)</description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_robot_action_module_msgs</build_depend>
  <build_depend>humanoid_robot_offset_tuner_msgs</build_depend>
  <build_depend>humanoid_robot_online_walking_module_msgs</build_depend>
  <build_depend>humanoid_robot_walking_module_msgs</build_depend>

  <build_export_depend>humanoid_robot_action_module_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_offset_tuner_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_online_walking_module_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_walking_module_msgs</build_export_depend>

  <exec_depend>humanoid_robot_action_module_msgs</exec_depend>
  <exec_depend>humanoid_robot_offset_tuner_msgs</exec_depend>
  <exec_depend>humanoid_robot_online_walking_module_msgs</exec_depend>
  <exec_depend>humanoid_robot_walking_module_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
