<?xml version="1.0"?>
<package>
  <name>op3_offset_tuner_msgs</name>
  <version>0.1.0</version>
  <description>The offset_tuner_msgs package</description>
  <license>Apache License 2.0</license>
  <author email="hjsong@robotis.com">Jay</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
