<?xml version="1.0"?>
<package>
  <name>robotis_op3_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS msgs packages for the ROBOTIS OP3 (meta package)
  </description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs</url>
  <url type="website">http://wiki.ros.org/robotis_op3_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>op3_action_module_msgs</run_depend>
  <run_depend>op3_offset_tuner_msgs</run_depend>
  <run_depend>op3_walking_module_msgs</run_depend>
  <export><metapackage/></export>
</package>
